pods.yml
apiVersion : v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    name: demo
spec:
  containers:
  - name: demo
    image: vamsibyramala/test
    resources:
    ports:
      - containerPort: 8080
