demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-serive
  labels:
    app: myapp
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30001
    protocol: TCP
  selector:
    app: myapp
